# textual_logging

./: README.md  log.py  pyproject.toml
src/textual_logging/: __init__.py  demo.py  formatter.py  handler.py  runner.py  widget.py
