[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "textual_logging"
version = "0.1.0"
description = "A logging widget for Textual applications to display Python logging records"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "Guillaume Galeazzi", email = "guillaume.galeazzi@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "textual",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pre-commit",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/yourusername/textual_logging"
Repository = "https://github.com/yourusername/textual_logging"

[tool.hatch.build.targets.wheel]
packages = ["src/textual_logging"]

[lint]
extend-select = ["I"]
fixable = ["ALL"]
